[package]
name = "lines"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
reqwest = { version = "0.11.18", features = ["json"] }
