[package]
name = "lines"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.12"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
